--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -260,7 +260,7 @@
       }
 
       &:not(.profile-tip-btn) {
-        margin-left: 25px;
+        margin-left: 18px;
       }
 
       &.more-functions {
